# mediasoft-test-task

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
shop_locator/: asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
shop_locator/shops/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
shop_locator/shops/migrations/: 0001_initial.py  0002_shop_city.py  0003_alter_city_name_alter_street_name.py  0004_alter_shop_name.py
